--- a/制作网站.md
+++ b/制作网站.md
@@ -52,6 +52,88 @@
     }
 ```
 
+
+
+## 1.磨砂玻璃设计（未使用）
+
+```css
+磨砂质感：
+background-color: rgba(225, 225, 225, 0.1);
+backdrop-filter: blur(20px);
+
+```
+
+
+
+## 2.渐变效果（未使用）
+
+```css
+.boxing {
+        width: 300px;
+        height: 80px;
+        border-radius: 50px;
+        background-image: linear-gradient(to right, #5B83B8, #FFD4EA);
+    }
+```
+
+
+
+## 3.flex的居中以及分布
+
+* 使用justify-content:space-between/space-around，然后用margin或者padding来调整
+* 居中大概率用justify-content: center;
+
+## 4.照片重叠
+
+* 在父盒子里面写display:grid
+* 在每张照片里面写grid-column:1;和grid-row:1;
+
+## 5.缓慢返回
+
+* 在鼠标悬停样式里面写的transition是针对鼠标移动到目标位置的结果
+* 要想改变鼠标移走的变化（快速/缓慢），要在要改变的标签里面加transition
+
+## 6.左图右照片
+
+* 用浮动，注意给父盒子高度，不然会导致高度塌陷
+
+## 7.鼠标滚动样式
+
+* 在动画里面添加，不用写transition，是由animation-range控制
+
+```css
+animation-timeline: view();
+animation-range: entry 10% cover 80%;
+```
+
+
+
+## 8.文字设置
+
+* 给文字设置阴影、颜色、字体、间距、开头空两行···
+
+## 9.上下震动
+
+```css
+ @keyframes shakeY {
+      0%   { transform: translateY(0); }
+      25%  { transform: translateY(-5px); }
+      50%  { transform: translateY(5px); }
+      75%  { transform: translateY(-5px); }
+      100% { transform: translateY(0); }
+    }
+```
+
+## 10.小tips
+
+* 在写一个东西的时候，先给一个盒子包起来
+* 注意position用的时候，父盒子的位置是确切的，如果不确切，创造一个父盒子
+* 可以给子盒子命名有相同的又有不同的，如第一个子盒子的class是box first，第二个是box second（用空格隔开）
+
+
+
+
+
 #f1e3f0
 #f8eee4
 #b394bf
